test de controller funcionando